# polymind

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  eval_gate.yml
docs/: API_REFERENCE.md  Here's the full proposal. Tap through each tab for.md  ROADMAP.md  plan.md
docs/architecture/: ARCHITECTURE.md
docs/architecture/ADR/: ADR-001-qdrant-over-pgvector.md  ADR-002-langgraph-over-crewai.md  ADR-003-clean-architecture.md  ADR-004-hipporag-v2.md  ADR-005-groq-llm.md
docs/architecture/diagrams/: system-overview.mmd
docs/learning/: 01_clean_architecture.md  02_langgraph_deep_dive.md  03_hipporag_explained.md  04_qdrant_patterns.md  05_evaluation_harness.md  06_n8n_integration.md  07_llmops_observability.md
docs/phases/: PHASE_1_foundation.md  PHASE_2_specialists.md  PHASE_3_hipporag.md  PHASE_4_agent_graph.md  PHASE_5_memory.md  PHASE_6_eval_ci.md  PHASE_7_api.md  PHASE_8_demo_deploy.md
infra/: Dockerfile  docker-compose.yml  modal_deploy.py  prometheus.yml
scripts/: run_eval.py  seed_qdrant.py
src/polymind/: __init__.py
src/polymind/api/: main.py
src/polymind/application/: graph.py  state.py
src/polymind/infrastructure/: async_utils.py  cache.py  circuit_breaker.py  degradation.py  hyde.py  (+3 more)
tests/: conftest.py
tests/e2e/: test_e2e_api.py  test_e2e_graph.py  test_e2e_infrastructure.py
tests/eval/: benchmark_v1.json  test_harness.py
tests/fixtures/: __init__.py
tests/integration/: test_api_integration.py  test_clip_integration.py  test_integration.py  test_qdrant_integration.py
tests/unit/: test_adaptive_retriever.py  test_api.py  test_asr_wrapper.py  test_cache.py  test_chunk_strategy.py  test_chunker.py  test_consolidation.py  test_critic.py  test_critic_comprehensive.py  test_degradation.py  test_docqa_wrapper.py  test_domain_entities.py  test_domain_interfaces.py  test_domain_value_objects.py  test_embedder.py  test_feedback.py  test_four_layer_memory.py  test_generator.py  test_graph.py  test_hipporag.py  test_hyde.py  test_ingest_use_case.py  test_llm_factory.py  test_memory.py  test_moa.py  test_multimodal.py  test_planner.py  test_rag_node.py  test_reranker.py  test_router.py  test_specialist_registry.py  test_state.py  test_summarizer_wrapper.py  test_synthesizer.py  test_tableqa_wrapper.py  test_vqa_wrapper.py
(+72 files in other folders)
