[tool.poetry]
name = "polymind"
version = "1.0.0"
description = "Self-evaluating, multimodal, multi-agent knowledge assistant"
authors = ["PolyMind Team"]
readme = "README.md"
packages = [{include = "polymind", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-community = "^0.3.0"
qdrant-client = "^1.11.0"
transformers = "^4.44.0"
torch = "^2.4.0"
accelerate = "^0.33.0"
sentence-transformers = "^3.1.0"
ragas = "^0.2.0"
deepeval = "^2.0.0"
mem0ai = "^0.1.0"
networkx = "^3.3"
pymupdf = "^1.24.0"
python-multipart = "^0.0.9"
prometheus-client = "^0.21.0"
structlog = "^24.4.0"
python-dotenv = "^1.0.1"
pydantic = "^2.9.0"
pandas = "^2.2.0"
librosa = "^0.10.2"
soundfile = "^0.12.1"
scikit-learn = "^1.5.0"
Pillow = "^10.4.0"
aiofiles = "^24.1.0"
groq = "^1.4.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.25.0"
streamlit = "^1.37.0"
modal = "^0.63.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
black = "^24.8.0"
isort = "^5.13.0"
pytest-cov = "^5.0.0"
pytest-json-report = "^1.5.0"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["polymind"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-p no:deepeval -p no:posthog"
markers = [
    "unit: pure unit tests (no I/O)",
    "integration: tests with real services",
    "eval: RAGAS + DeepEval benchmark suite",
    "heavy: tests requiring full ML stack (sentence-transformers, pyarrow)",
    "e2e: end-to-end tests for full application stack",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
